--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="instructions">Press and drag to make wind<br/><span class="lightInstructions">the lion will surely appreciate</span></div>
 
 <div id="credits">
-  <p>Prints on <a class="society6" href="https://society6.com/yakudoo/"  target="blank">society6</a> | <a href="https://www.instagram.com/legioncomeforth/" target="blank">Instagram</a></p>
+  <p>Prints on <a class="Source Code" href="https://society6.com/yakudoo/"  target="blank">society6</a> | <a href="https://www.instagram.com/legioncomeforth/" target="blank">Instagram</a></p>
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
